Open API setup and notations, first tests
